# getting-started-python-uv

./: .gitignore  README.md  auth.py
project-1/: main.py  pyproject.toml
project-2/: README.md  agent.py  database.py  main.py  models.py  seed.py  support.db
project-3/: __init__.py  app-01.py  main.py  pyproject.toml
project-4/: README.md  datasource.py  main.py  pyproject.toml  runserver.py
project-5/: README.md  app.py  pyproject.toml
project-5/db/: cars.db  init_db.py  schema.sql
project-5/templates/: 404.html  500.html  base.html  car.html  cars.html  common.html  create.html  developer.html  edit-2.html  edit.html  edit2.html  index.html  old-index.html
project-6/: README.md  app.py  code-01.py  pyproject.toml  vehiclesdb.db
project-7/: README.md  hello.py  northwind-schema.sql  pyproject.toml
project-8/: hello.py  pyproject.toml
project-8/auth/: auth.py  database.py  models.py  server1.py
project-8/test-pydandic/: sample-1.py  server.py  test-01.py
project-9/: pyproject.toml  utils.py
