[project]
name = "project-8"
version = "0.1.0"
description = "FastAPI project with advanced features"
authors = [
    { name = "Adi B.", email = "" }
    ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "uvicorn>=0.34.3",
]
