[project]
name = "project-8"
version = "0.1.0"
description = "FastAPI project with advanced features"
authors = [
    { name = "Adi B.", email = "" }
    ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jwt>=1.3.1",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.4.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn>=0.34.3",
]
